--- a/lib/package.json
+++ b/lib/package.json
@@ -8,6 +8,8 @@
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-newer": "^1.1.1",
+    "grunt-notify": "^0.4.1",
     "matchdep": "^0.3.0"
   }
 }
